# mailjet_client

./: .licensesnip  Cargo.toml  LICENSE  README.md
.github/workflows/: pull_request.yml  rust.yml
examples/: simple_send_v3.rs
src/: error.rs  lib.rs  mailjet_api.rs  mailjet_client.rs  mailjet_client_builder.rs
src/data_objects/: message.rs  request.rs  responses.rs
tests/api/: api_client.rs  helper.rs  main.rs
tests/api/data/: response_send_v3.json  valid_mail_v3.json  valid_mail_v3_1.json
