[package]
name = "mailjet_client"
authors = ["Felipe Torres González <torresfelipex1@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "A client for Mailjet's REST API"
readme = "README.md"
repository = "https://github.com/felipet/mailjet_client"
categories = ["api-bindings", "email"]
keywords = ["email", "mailjet"]

[dependencies]
names = "0.14.0"
once_cell = "1.19.0"
pretty_assertions = "1.4.1"
reqwest = { version = "0.12.7", features = ["native-tls", "json"] }
reqwest-middleware = { version = "0.3.3", features = ["http2", "json"] }
reqwest-tracing = "0.5.3"
secrecy = "0.10.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tracing = "0.1.40"
typetag = "0.2.18"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
rstest = "0.22.0"
async-std = { version = "1.13", features = ["attributes", "tokio1"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "fmt", "ansi"] }
anyhow = "1.0.89"
wiremock = "0.5"
